search-bar right-spacing fixed on both pages

--- a/styles/03-components/_button.scss
+++ b/styles/03-components/_button.scss
@@ -328,7 +328,11 @@
     }
 
     &--search-box {
+      margin-right: 12px;
+      padding: 13px 34px;
+
       &-sm {
+        margin-right: 12px;
         padding: 13px 34px;
       }
 
