--- a/styles/04-layout/_nav.scss
+++ b/styles/04-layout/_nav.scss
@@ -56,7 +56,7 @@
       top: 80px;
       right: 0;
       width: 100%;
-      height: 26vh;
+      height: 36vh;
       padding-top: 12px;
       text-align: center;
       border-radius: 4px;
